--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 *{
     font-family: 'JetBrains Mono', monospace;
+    margin-left: 4px;
 }
 a{
     font-size: 14px;
+    margin-left: 10px;
 }
 p{
     font-size: 16px;
