--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 *{
+    background-color: rgb(24,26,27);
     font-family: 'JetBrains Mono', monospace;
+    color: white;
     margin-left: 4px;
 }
 a{
     font-size: 14px;
     margin-left: 10px;
     margin-top: 4px;
-    color: blue;
+    color: rgba(57, 123, 245, 0.938);
 }
 p{
     font-size: 16px;
