--- a/style.css
+++ b/style.css
@@ -14,5 +14,23 @@ p{
     font-size: 16px;
 }
 h2{
+    text-align: center;
     font-size: 26px;
+}
+h3{
+    background-color:rgb(22, 23, 24) ;
+}
+#heading{
+    text-align: center;
+    font-size: 14px;
+    font-style: bold;
+}
+#orange{
+    color: tomato;
+}
+#green{
+    color: green;
+}
+#blue{
+    color: rgba(10, 40, 175, 0.87)
 }
