--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ p{
 h2{
     text-align: center;
     font-size: 26px;
+    background-color:rgb(22, 23, 24) ;
 }
 h3{
     background-color:rgb(22, 23, 24) ;
